2010-03-10
	* add codingTable argument to markRange, retrieval,ExportCoding, ClickHandlerFun, HL_CodingWithMemo, HL_AllCodings,CodeWithCoding, filesCodingBy*, getCodingsByOne.
	* upgrade RQDATables to version 0.2.0.
	* mark, unmark,coding buttons, click handler of codes and ViewFileFun take care of different coding tables.
	* "Editing file" updates coding2 now.

2010-03-09
	* rename codedByTwo to nCodedByTwo.
	
2010-03-07
	* bugfixes of or operation on codings.
	
2010-03-06
	* bugfixes of not operation on codings.

2010-03-05
	* new function of getCodingsByOne.
	* file Id, file name etc. have a class (e.g. RQDA.vector).
	* new functions of %and%, %or%, %not% and methods for RQDA.vector,and codingsByOne.
	* bugfix of CrossCode, now it returns correct colnames and rownames.
	* new function of codedByTwo.

	
2010-03-04
	* new functions of CaseCodedByAnd, CaseCodeByOr, CaseCodedByNot.
	* save button in Add new file widget is disabled by default.
	* add new file widget is cleared after content is saved, assigned obj are removed when closed.
	* new function of getFiles().
	* save button in edit file widget is disabled by default.
	* add various Rd files.

2010-03-03
	* new functions of FileCodedByAnd, FileCodeByOr, FileCodedByNot.
	* new function of Ops.ID().
	
2010-03-02
	* bugfix of and(), now the returning codings are correct.
	* Search a word in a gtext widget, e.g. searchWord().
	* New function of UpdateCoding().
	* New function of FileCodedByAnd().
	* bugfix of ClickHandlerFun().

2010-03-01
	* use more informative prefix in category memo.
	* make endMark of a coding visible when clicked.
	* delete enMark when delete a coding.
	
2010-02-29
	* RQDA2tm() is moved to new package of RQDAtm.
	* bugfix of new project button (Thanks Steven McEachern for reporting).
	
2010-02-27
	* Insert one code label instead of two. It is more readable.
	* Minor bugfix of "highlight coding with memo" in coding popup menu.

2010-02-26 (0.1-9 rev 233)